--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-	"name": "TODO",
+	"name": "legerete/skeleton",
 	"version": "0.0.1",
-	"description": "TODO",
+	"description": "Skeleton",
 	"main": "www/index.php",
 	"dependencies": {
 		"jquery": "~2.1.1",
@@ -14,7 +14,8 @@
 	"author": "",
 	"license": "MIT",
 	"authors": [
-		"somebody <somebody@wunderman.cz>"
+		"Jan Havlíček <jan.havlicek@legerete.cz>",
+		"Jiří Švec <jiri.svec@legerete.cz>"
 	],
 	"homepage": "",
 	"ignore": [
@@ -25,19 +26,9 @@
 	"overrides": {
 		"bootstrap-sass": {
 			"main": [
-				"./assets/stylesheets/_bootstrap.scss",
-				"./assets/javascripts/bootstrap/transition.js",
-				"./assets/javascripts/bootstrap/alert.js",
-				"./assets/javascripts/bootstrap/button.js",
-				"./assets/javascripts/bootstrap/carousel.js",
-				"./assets/javascripts/bootstrap/collapse.js",
-				"./assets/javascripts/bootstrap/dropdown.js",
-				"./assets/javascripts/bootstrap/modal.js",
-				"./assets/javascripts/bootstrap/tooltip.js",
-				"./assets/javascripts/bootstrap/popover.js",
-				"./assets/javascripts/bootstrap/scrollspy.js",
-				"./assets/javascripts/bootstrap/tab.js",
-				"./assets/javascripts/bootstrap/affix.js",
+				"./assets/stylesheets/bootstrap/_variables.scss",
+				"./assets/stylesheets/bootstrap/_mixins.scss",
+				"./assets/stylesheets/bootstrap/_utilities.scss",
 				"./assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
 				"./assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
 				"./assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
