--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
   },
   "author": "Legerete s.r.o.",
   "devDependencies": {
-    "eslint-config-standard": "^5.3.1",
+    "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.0",
+    "gulp-coffee": "^2.3.2",
+    "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
-    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-main-bower-files": "^1.5.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.2.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^5.0.0",
     "vinyl-buffer": "^1.0.0",
