--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Legerete s.r.o.",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
