--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-main-bower-files": "^1.5.0",
+    "gulp-modify-css-urls": "^0.2.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
