--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.0",
     "gulp-if": "^2.0.0",
