--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,11 @@
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
 		"tracy/tracy": "^2.4",
-		"kdyby/doctrine": "~3.1.0",
+		"kdyby/doctrine": "^3.1",
 		"kdyby/monolog": "~1.1.0",
 		"phpmailer/phpmailer": "v5.2.9",
-		"sentry/sentry": "^0.22.0"
+		"sentry/sentry": "^0.22.0",
+		"kdyby/console": "^2.6"
 	},
 	"autoload": {
 		"psr-4": {
