Presun Monologu do Utils namespace + Odebrani CoffeeScript + testovani fontu a obrazku + rozsireni Readme

--- a/app/config/config.local.neon.example
+++ b/app/config/config.local.neon.example
@@ -1,7 +1,7 @@
 parameters:
 	devel: true
 	sentry:
-		dsn: #DSN klic v zavislosti na prostredi vygenerovany ze sentry
+		dsn: #DSN key generated in Sentry, depends on environment
 		settings:
 			trace: true
 
