--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -38,7 +38,7 @@ extensions:
 	events: Kdyby\Events\DI\EventsExtension
 	annotations: Kdyby\Annotations\DI\AnnotationsExtension
 	doctrine: Kdyby\Doctrine\DI\OrmExtension
-	monolog: App\Monolog\DI\MonologExtension
+	monolog: App\Utils\Monolog\DI\MonologExtension
 
 
 monolog:
