--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,12 @@
 	"require": {
 		"php": ">=5.6.0",
 		"nette/application": "^2.4",
-		"nette/bootstrap": "^2.4.1",
-		"nette/caching": "^2.5",
-		"nette/database": "^2.4",
+		"nette/bootstrap": "^2.4",
+		"nette/caching": "^2.4",
 		"nette/di": "^2.4",
-		"nette/finder": "^2.4",
 		"nette/forms": "^2.4",
 		"nette/http": "^2.4",
 		"nette/mail": "^2.4",
-		"nette/robot-loader": "^2.4",
-		"nette/safe-stream": "^2.3",
 		"nette/security": "^2.4",
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
@@ -36,7 +32,8 @@
 	"autoload": {
 		"psr-4": {
 			"App\\": "app/"
-		}
+		},
+	  	"classmap": ["vendor/other/"]
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
