--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Skeleton",
   "main": "www/index.php",
   "scripts": {
-    "build": "bower install && gulp build"
+    "build": "bower install && gulp prebuild && gulp build"
   },
   "author": "Legerete s.r.o.",
   "devDependencies": {
@@ -14,8 +14,11 @@
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
-    "gulp-eslint": "^3.0.1",
-    "gulp-filter": "^4.0.0",
+	"gulp-eslint": "^3.0.1",
+	"eslint-config-es2015": "^1.1.0",
+	"eslint-plugin-promise": "^1.0.8",
+	"eslint-config-standard": "^5.3.5",
+	"gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.3",
@@ -31,6 +34,11 @@
     "imagemin-pngquant": "^5.0.0",
     "vinyl-buffer": "^1.0.0",
     "wiredep": "^4.0.0",
-    "yargs": "^3.32.0"
+    "yargs": "^3.32.0",
+	"browserify": "^13.1.0",
+	"babelify": "^7.3.0",
+	"babel-preset-es2015": "^6.13.2",
+	"gulp-sourcemaps": "^1.6.0",
+	"vinyl-source-stream": "^1.1.0"
   }
 }
