--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
 		"kdyby/monolog": "~1.1.0",
 		"phpmailer/phpmailer": "v5.2.9",
 		"sentry/sentry": "^0.22.0",
-		"kdyby/console": "^2.6"
+		"kdyby/console": "^2.6",
+		"cboden/ratchet": "^0.3.5"
 	},
 	"autoload": {
 		"psr-4": {
 			"App\\": "app/"
-		},
-	  	"classmap": ["vendor/other/"]
+		}
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
