--- a/bower.json
+++ b/bower.json
@@ -1,48 +1,49 @@
 {
-	"name": "porta-invest-sro-crm",
-	"version": "0.0.1",
-	"description": "Porta Invest s.r.o. - CRM",
-	"main": "www/index.php",
-	"dependencies": {
-		"jquery": "~2.1.1",
-		"bootstrap-sass": "~3.3.6",
-		"modernizr": "3.3.1"
-	},
-	"devDependencies": {},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "MIT",
-	"authors": [
-		"Jan Havlíček <jan.havlicek@legerete.cz>",
-		"Jiří Švec <jiri.svec@legerete.cz>"
-	],
-	"homepage": "",
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"bower_components"
-	],
-	"overrides": {
-		"bootstrap-sass": {
-			"main": [
-				"./assets/stylesheets/bootstrap/_variables.scss",
-				"./assets/stylesheets/bootstrap/_mixins.scss",
-				"./assets/stylesheets/bootstrap/_utilities.scss",
-				"./assets/stylesheets/bootstrap/_normalize.scss",
-				"./assets/stylesheets/bootstrap/_type.scss",
-				"./assets/javascripts/bootstrap/button.js",
-				"./assets/javascripts/bootstrap/dropdown.js",
-				"./assets/javascripts/bootstrap/tooltip.js",
-				"./assets/javascripts/bootstrap/popover.js",
-				"./assets/javascripts/bootstrap/collapse.js",
-				"./assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
-				"./assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
-				"./assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
-				"./assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
-				"./assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
-			]
-		}
-	}
+  "name": "porta-invest-sro-crm",
+  "version": "0.0.1",
+  "description": "Porta Invest s.r.o. - CRM",
+  "main": "www/index.php",
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "bootstrap-sass": "~3.3.6",
+    "modernizr": "3.3.1",
+    "legerete-crm-sign-in": "*"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT",
+  "authors": [
+    "Jan Havlíček <jan.havlicek@legerete.cz>",
+    "Jiří Švec <jiri.svec@legerete.cz>"
+  ],
+  "homepage": "",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components"
+  ],
+  "overrides": {
+    "bootstrap-sass": {
+      "main": [
+        "./assets/stylesheets/bootstrap/_variables.scss",
+        "./assets/stylesheets/bootstrap/_mixins.scss",
+        "./assets/stylesheets/bootstrap/_utilities.scss",
+        "./assets/stylesheets/bootstrap/_normalize.scss",
+        "./assets/stylesheets/bootstrap/_type.scss",
+        "./assets/javascripts/bootstrap/button.js",
+        "./assets/javascripts/bootstrap/dropdown.js",
+        "./assets/javascripts/bootstrap/tooltip.js",
+        "./assets/javascripts/bootstrap/popover.js",
+        "./assets/javascripts/bootstrap/collapse.js",
+        "./assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
+        "./assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
+        "./assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
+        "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
+        "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    }
+  }
 }
