--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,21 @@ services:
       - 8005:80
       - 8006:8006
     volumes:
-      - .:/data
-      - ./www/:/data/www
+      - .:/data:rw
+      - ./www/:/data/www:rw
     depends_on:
       - mysql
     links:
       - mysql:mysql
     entrypoint: /data/start-server.sh
+#    restart: always
   mysql:
     image: mariadb
     container_name: porta-invest-crm-db
     ports:
       - 3309:3306
     volumes:
-      - ./mariadb:/var/lib/mysql
+      - ./mariadb:/var/lib/mysql:rw
     environment:
       MYSQL_ROOT_PASSWORD: 08802e9a2ade49e40a55ff00faec
+#    restart: always
