--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 	"babelify": "^7.3.0",
 	"babel-preset-es2015": "^6.13.2",
 	"gulp-sourcemaps": "^1.6.0",
-	"vinyl-source-stream": "^1.1.0"
+	"vinyl-source-stream": "^1.1.0",
+	"eslint-plugin-standard": "2.0.0",
+	"jquery": "3.1.0"
   }
 }
