--- a/app/WebSocket/config/config.neon
+++ b/app/WebSocket/config/config.neon
@@ -1,13 +1,9 @@
-
-
-#session.save_path: %tempDir%
-
 console:
 	disabled: true
 	application: false
 
 extensions:
-	WSE: Legerete\Websocket\DI\WebSocketServerExtension
+	WSE: Legerete\WebSocket\DI\WebSocketServerExtension
 
 WSE:
 	port: 8006
