--- a/vendor-dev/legerete/websocket/nette-src/DI/WebSocketServerExtensionConfig.neon
+++ b/vendor-dev/legerete/websocket/nette-src/DI/WebSocketServerExtensionConfig.neon
@@ -11,3 +11,4 @@ services:
 	ioServer: Ratchet\Server\IoServer::factory
 
 	- Legerete\WebSocket\Message\ReceivedMessageFactory
+	- Legerete\WebSocket\Application\Worker
