--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -41,6 +41,7 @@ extensions:
 	core: Legerete\DI\CoreExtension
 	LeSecurity: Legerete\Security\DI\SecurityExtension
 	signIn: Legerete\UserModule\DI\SignInExtension
+	scheduler: Legerete\Spa\KendoScheduler\DI\SpaSchedulerExtension
 
 core:
 	pageTitle: 'Porta Invest s.r.o. - CRM'
@@ -101,6 +102,7 @@ doctrine:
 		debug: no
 		metadata:
 			App: %appDir%
+			Legerete\Spa\KendoScheduler\Model: %appDir%/../vendor-dev
 
 services:
 	router: App\Router\RouterFactory::createRouter
