--- a/vendor-dev/legerete/spa-kendo-user/nette-src/DI/config.neon
+++ b/vendor-dev/legerete/spa-kendo-user/nette-src/DI/config.neon
@@ -1,2 +1,3 @@
 services:
 	- Legerete\Spa\KendoUser\Model\Service\UserModelService
+	userTemplate: Legerete\Spa\KendoUser\Components\UserTemplateControlFactory
