CLI command pro pridani resources do DB z extensions, resp. tridy Legerete\Security\Permission

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -146,3 +146,9 @@ doctrine:
 
 services:
 	router: App\Router\RouterFactory::createRouter
+
+	# Kdyby\Console commands
+	#
+	-
+		class: App\Console\Command\UpdateAclResources
+		tags: [kdyby.console.command]
