--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
         "./assets/javascripts/bootstrap/dropdown.js",
         "./assets/javascripts/bootstrap/tooltip.js",
         "./assets/javascripts/bootstrap/popover.js",
+        "./assets/javascripts/bootstrap/modal.js",
         "./assets/javascripts/bootstrap/collapse.js",
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
