--- a/vendor-dev/legerete/security/src/DI/config.neon
+++ b/vendor-dev/legerete/security/src/DI/config.neon
@@ -7,3 +7,5 @@ services:
 	#
 	- Legerete\Security\AuthorizatorFactory
 	authorizator: @Legerete\Security\AuthorizatorFactory::create
+
+	securedPresenter: Legerete\Security\Presenters\SecuredPresenter
