--- a/vendor-dev/legerete/spa-kendo-user/nette-src/lang/users.en.neon
+++ b/vendor-dev/legerete/spa-kendo-user/nette-src/lang/users.en.neon
@@ -18,3 +18,8 @@ user:
 	email: E-mail
 	phone: Phone
 	save: Save
+	is-admin: Is user admin?
+	roles: User roles
+	security: Security
+	password: Password
+	passwordRe: Password repeat
