--- a/vendor-dev/legerete/spa-kendo-acl/nette-src/lang/acl.en.neon
+++ b/vendor-dev/legerete/spa-kendo-acl/nette-src/lang/acl.en.neon
@@ -2,7 +2,7 @@ h1: Acl
 resource: Resource
 create: Create
 destroy: Destroy
-readAll: Read all
+readAll: Read All
 readMy: Read My
 show: Show
 update: Update
