--- a/vendor-dev/legerete/user-sign-in-otp/nette-src/DI/SignInOtpExtensionConfig.neon
+++ b/vendor-dev/legerete/user-sign-in-otp/nette-src/DI/SignInOtpExtensionConfig.neon
@@ -1,3 +1,3 @@
 services:
-	SignPresenter: Legerete\UserSignInOtp\Presenters\SignOtpPresenter
+	SignPresenter: Legerete\UserSignInOtpModule\Presenters\SignOtpPresenter
 	- Legerete\UserSignInOtp\Components\SignInOtp\SignInOtpFactory
